# relyapi

./: .gitignore  Dockerfile  README.md  docker-coompose.yml  main.py  pyproject.toml  settings.py
.github/workflows/: backend.yaml  ci.yaml  fronted.yaml  server.yaml  worker.yaml
api/: main.py
api/app/rely/: proxy.py
api/app/task/: __init__.py
api/utils/: exception.py
app/: router.py
app/bypass/: forward.py
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/app/bypass/: forward.py
backend/deploy/: .env.server  server.conf
backend/tests/: curl_test.py  dp_test.py  geoip_test.py  proxy_test.py  tranport.py
backend/utils/: plugin.py  plugin_invoker.py
fronted/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
fronted/src/app/: globals.css  page.tsx
fronted/src/components/: Card.tsx  LoadingSpinner.tsx
frontend/: Dockerfile  pnpm-lock.yaml
frontend/deploy/: Caddyfile
plugins/: __init__.py  taobao.py
sdk/: pyproject.toml
sdk/relyapi/: __init__.py  client.py  manager.py  plugin.py  transport.py  utils.py
sdk/tests/: client_test.py
server/: main.py
server/app/: router.py
server/app/admin/: account.py  proxy.py
server/app/task/: __init__.py  server.py
server/tests/: socketio_client_test.py  socketio_server_test.py
tests/: adapter.py  api.py  curl_test.py  dp_test.py  geoip_test.py  http_sync_api.py  ip2region_test.py  pcsign.py  proxy_test.py  tranport.py  url_test.py
utils/: common_utils.py  context_vars.py  cookie_utils.py  curl_test.py  header_utils.py  middleware.py  tls_utils.py
worker/: main.py  settings.py
worker/app/: router.py
worker/app/bypass/: forward.py
worker/app/proxy/: forward.py
worker/app/rely/: proxy.py
worker/plugins/: __init__.py  baidu.py  taobao.py
worker/utils/: common_utils.py  cookie_utils.py  domain.py  exceptions.py  plugin_invoker.py  retry.py  tls_utils.py  transport.py  util.py  wrapper.py
(+5 files in other folders)
